# mime-db

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: CI.yaml
src/: extensions.rs  lib.rs  types.rs
