[package]
name = "mime-db"
version = "0.1.3"
authors = ["Fangdun Cai <cfddream@gmail.com>"]
edition = "2018"
description = "Media Type Database, looks up `extension` or `media type`."
keywords = ["mime", "media-extensions", "media-types"]
repository = "https://github.com/trek-rs/mime-db"
readme = "README.md"
license = "MIT/Apache-2.0"

[build-dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
