[package]
name = "mime-db"
version = "1.3.0"
authors = ["Fangdun Cai <cfddream@gmail.com>"]
edition = "2018"
description = "Media Type Database, looks up `extension` or `media type`."
keywords = ["mime", "media-extensions", "media-types", "no_std"]
repository = "https://github.com/viz-rs/mime-db"
readme = "README.md"
license = "MIT/Apache-2.0"
build = false

include = [
    "CHANGES.md",
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "src/*.rs"
]

[build-dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt"] }
