[package]
name = "mime-db"
version = "1.7.0"
authors = ["Fangdun Cai <cfddream@gmail.com>"]
description = "Media Type Database, looks up `extension` or `media type`."
keywords = ["mime", "media-extensions", "media-types", "no_std"]
repository = "https://github.com/viz-rs/mime-db"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
build = false

include = [
    "CHANGES.md",
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "src/*.rs"
]

[build-dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt"] }
